--- a/sample-app/src/main/AndroidManifest.xml
+++ b/sample-app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/AppTheme"
         android:label="@string/app_name">
         <activity
-                android:name=".UIBindingActivity">
+            android:name=".UIBindingActivity"
+            android:label="RxUIBindingActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -18,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".RetainedFragmentActivity">
+            android:name=".RetainedFragmentActivity"
+            android:label="RxRetainedFragmentActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -27,7 +29,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListeningFragmentActivity">
+            android:name=".ListeningFragmentActivity"
+            android:label="RxListeningFragmentActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -36,7 +39,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListFragmentActivity">
+            android:name=".ListFragmentActivity"
+            android:label="RxListFragmentActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -45,7 +49,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListenInOutActivity">
+            android:name=".ListenInOutActivity"
+            android:label="RxListenInOutActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -55,7 +60,7 @@
         </activity>
 
         <activity android:name=".LifecycleObservableActivity"
-                  android:label="Rx Lifecycle">
+                  android:label="RxLifecycleObservableActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER"/>
